src/bindings.rs

pub const OodleLZSeekTable_Flags_OodleLZSeekTable_Flags_None: OodleLZSeekTable_Flags = 0;
pub const OodleLZSeekTable_Flags_OodleLZSeekTable_Flags_MakeRawCRCs: OodleLZSeekTable_Flags = 1;
pub const OodleLZSeekTable_Flags_OodleLZSeekTable_Flags_Force32: OodleLZSeekTable_Flags =
    1073741824;
pub type OodleLZSeekTable_Flags = ::std::os::raw::c_uint;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct OodleConfigValues {
    pub m_OodleLZ_LW_LRM_step: OO_S32,
    pub m_OodleLZ_LW_LRM_hashLength: OO_S32,
    pub m_OodleLZ_LW_LRM_jumpbits: OO_S32,
    pub m_OodleLZ_Decoder_Max_Stack_Size: OO_S32,
    pub m_OodleLZ_Small_Buffer_LZ_Fallback_Size_Unused: OO_S32,
    pub m_OodleLZ_BackwardsCompatible_MajorVersion: OO_S32,
    pub m_oodle_header_version: OO_U32,
}
#[test]
fn bindgen_test_layout_OodleConfigValues() {
    const UNINIT: ::std::mem::MaybeUninit<OodleConfigValues> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<OodleConfigValues>(),
        28usize,
        concat!("Size of: ", stringify!(OodleConfigValues))
    );
    assert_eq!(
        ::std::mem::align_of::<OodleConfigValues>(),
        1usize,
        concat!("Alignment of ", stringify!(OodleConfigValues))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m_OodleLZ_LW_LRM_step) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(OodleConfigValues),
            "::",
            stringify!(m_OodleLZ_LW_LRM_step)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m_OodleLZ_LW_LRM_hashLength) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(OodleConfigValues),
            "::",
            stringify!(m_OodleLZ_LW_LRM_hashLength)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m_OodleLZ_LW_LRM_jumpbits) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(OodleConfigValues),
            "::",
            stringify!(m_OodleLZ_LW_LRM_jumpbits)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).m_OodleLZ_Decoder_Max_Stack_Size) as usize - ptr as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(OodleConfigValues),
            "::",
            stringify!(m_OodleLZ_Decoder_Max_Stack_Size)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).m_OodleLZ_Small_Buffer_LZ_Fallback_Size_Unused) as usize
                - ptr as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(OodleConfigValues),
            "::",
            stringify!(m_OodleLZ_Small_Buffer_LZ_Fallback_Size_Unused)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).m_OodleLZ_BackwardsCompatible_MajorVersion) as usize
                - ptr as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(OodleConfigValues),
            "::",
            stringify!(m_OodleLZ_BackwardsCompatible_MajorVersion)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m_oodle_header_version) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(OodleConfigValues),
            "::",
            stringify!(m_oodle_header_version)
        )
    );
}
extern "C" {
    pub fn Oodle_GetConfigValues(ptr: *mut OodleConfigValues);
}
extern "C" {
    pub fn Oodle_SetConfigValues(ptr: *const OodleConfigValues);
}
pub const Oodle_UsageWarnings_Oodle_UsageWarnings_Enabled: Oodle_UsageWarnings = 0;
pub const Oodle_UsageWarnings_Oodle_UsageWarnings_Disabled: Oodle_UsageWarnings = 1;
pub const Oodle_UsageWarnings_Oodle_UsageWarnings_Force32: Oodle_UsageWarnings = 1073741824;
pub type Oodle_UsageWarnings = ::std::os::raw::c_uint;
extern "C" {
    pub fn Oodle_SetUsageWarnings(state: Oodle_UsageWarnings);
}
pub type t_fp_OodleCore_Plugin_MallocAligned = ::std::option::Option<
    unsafe extern "C" fn(bytes: OO_SINTa, alignment: OO_S32) -> *mut ::std::os::raw::c_void,
>;
pub type t_fp_OodleCore_Plugin_Free =
    ::std::option::Option<unsafe extern "C" fn(ptr: *mut ::std::os::raw::c_void)>;
extern "C" {
    pub fn OodleCore_Plugins_SetAllocators(
        fp_OodleMallocAligned: t_fp_OodleCore_Plugin_MallocAligned,
        fp_OodleFree: t_fp_OodleCore_Plugin_Free,
    );
}
pub type t_fp_OodleCore_Plugin_RunJob = ::std::option::Option<
    unsafe extern "C" fn(
        fp_job: t_OodleFPVoidVoidStar,
        job_data: *mut ::std::os::raw::c_void,
        dependencies: *mut OO_U64,
        num_dependencies: ::std::os::raw::c_int,
        user_ptr: *mut ::std::os::raw::c_void,
    ) -> OO_U64,
>;
pub type t_fp_OodleCore_Plugin_WaitJob = ::std::option::Option<
    unsafe extern "C" fn(job_handle: OO_U64, user_ptr: *mut ::std::os::raw::c_void),
>;
extern "C" {
    pub fn OodleCore_Plugins_SetJobSystem(
        fp_RunJob: t_fp_OodleCore_Plugin_RunJob,
        fp_WaitJob: t_fp_OodleCore_Plugin_WaitJob,
    );
}
extern "C" {
    pub fn OodleCore_Plugins_SetJobSystemAndCount(
        fp_RunJob: t_fp_OodleCore_Plugin_RunJob,
        fp_WaitJob: t_fp_OodleCore_Plugin_WaitJob,
        target_parallelism: ::std::os::raw::c_int,
    );
}
pub type t_fp_OodleCore_Plugin_Printf = ::std::option::Option<
    unsafe extern "C" fn(
        verboseLevel: ::std::os::raw::c_int,
        file: *const ::std::os::raw::c_char,
        line: ::std::os::raw::c_int,
        fmt: *const ::std::os::raw::c_char,
        ...
    ),
>;
extern "C" {
    pub fn OodleCore_Plugins_SetPrintf(
        fp_rrRawPrintf: t_fp_OodleCore_Plugin_Printf,
    ) -> t_fp_OodleCore_Plugin_Printf;
}
pub type t_fp_OodleCore_Plugin_DisplayAssertion = ::std::option::Option<
    unsafe extern "C" fn(
        file: *const ::std::os::raw::c_char,
        line: ::std::os::raw::c_int,
        function: *const ::std::os::raw::c_char,
        message: *const ::std::os::raw::c_char,
    ) -> OO_BOOL,
>;
extern "C" {
    pub fn OodleCore_Plugins_SetAssertion(
        fp_rrDisplayAssertion: t_fp_OodleCore_Plugin_DisplayAssertion,
    ) -> t_fp_OodleCore_Plugin_DisplayAssertion;
}
extern "C" {
    pub fn OodleCore_Plugin_MallocAligned_Default(
        size: OO_SINTa,
        alignment: OO_S32,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn OodleCore_Plugin_Free_Default(ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn OodleCore_Plugin_Printf_Default(
        verboseLevel: ::std::os::raw::c_int,
        file: *const ::std::os::raw::c_char,
        line: ::std::os::raw::c_int,
        fmt: *const ::std::os::raw::c_char,
        ...
    );
}
extern "C" {
    pub fn OodleCore_Plugin_Printf_Verbose(
        verboseLevel: ::std::os::raw::c_int,
        file: *const ::std::os::raw::c_char,
        line: ::std::os::raw::c_int,
        fmt: *const ::std::os::raw::c_char,
        ...
    );
}
extern "C" {
    pub fn OodleCore_Plugin_DisplayAssertion_Default(
        file: *const ::std::os::raw::c_char,
        line: ::std::os::raw::c_int,
        function: *const ::std::os::raw::c_char,
        message: *const ::std::os::raw::c_char,
    ) -> OO_BOOL;
}
extern "C" {
    pub fn OodleCore_Plugin_RunJob_Default(
        fp_job: t_OodleFPVoidVoidStar,
        job_data: *mut ::std::os::raw::c_void,
        dependencies: *mut OO_U64,
        num_dependencies: ::std::os::raw::c_int,
        user_ptr: *mut ::std::os::raw::c_void,
    ) -> OO_U64;
}
extern "C" {
    pub fn OodleCore_Plugin_WaitJob_Default(
        job_handle: OO_U64,
        user_ptr: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn OodleLZ_Compress(
        compressor: OodleLZ_Compressor,
        rawBuf: *const ::std::os::raw::c_void,
        rawLen: OO_SINTa,
        compBuf: *mut ::std::os::raw::c_void,
        level: OodleLZ_CompressionLevel,
        pOptions: *const OodleLZ_CompressOptions,
        dictionaryBase: *const ::std::os::raw::c_void,
        lrm: *const ::std::os::raw::c_void,
        scratchMem: *mut ::std::os::raw::c_void,
        scratchSize: OO_SINTa,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_Decompress(
        compBuf: *const ::std::os::raw::c_void,
        compBufSize: OO_SINTa,
        rawBuf: *mut ::std::os::raw::c_void,
        rawLen: OO_SINTa,
        fuzzSafe: OodleLZ_FuzzSafe,
        checkCRC: OodleLZ_CheckCRC,
        verbosity: OodleLZ_Verbosity,
        decBufBase: *mut ::std::os::raw::c_void,
        decBufSize: OO_SINTa,
        fpCallback: OodleDecompressCallback,
        callbackUserData: *mut ::std::os::raw::c_void,
        decoderMemory: *mut ::std::os::raw::c_void,
        decoderMemorySize: OO_SINTa,
        threadPhase: OodleLZ_Decode_ThreadPhase,
    ) -> OO_SINTa;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _OodleLZDecoder {
    _unused: [u8; 0],
}
pub type OodleLZDecoder = _OodleLZDecoder;
extern "C" {
    pub fn OodleLZDecoder_Create(
        compressor: OodleLZ_Compressor,
        rawLen: OO_S64,
        memory: *mut ::std::os::raw::c_void,
        memorySize: OO_SINTa,
    ) -> *mut OodleLZDecoder;
}
extern "C" {
    pub fn OodleLZDecoder_MemorySizeNeeded(
        compressor: OodleLZ_Compressor,
        rawLen: OO_SINTa,
    ) -> OO_S32;
}
extern "C" {
    pub fn OodleLZ_ThreadPhased_BlockDecoderMemorySizeNeeded() -> OO_S32;
}
extern "C" {
    pub fn OodleLZDecoder_Destroy(decoder: *mut OodleLZDecoder);
}
extern "C" {
    pub fn OodleLZDecoder_Reset(
        decoder: *mut OodleLZDecoder,
        decPos: OO_SINTa,
        decLen: OO_SINTa,
    ) -> OO_BOOL;
}
extern "C" {
    pub fn OodleLZDecoder_DecodeSome(
        decoder: *mut OodleLZDecoder,
        out: *mut OodleLZ_DecodeSome_Out,
        decBuf: *mut ::std::os::raw::c_void,
        decBufPos: OO_SINTa,
        decBufferSize: OO_SINTa,
        decBufAvail: OO_SINTa,
        compPtr: *const ::std::os::raw::c_void,
        compAvail: OO_SINTa,
        fuzzSafe: OodleLZ_FuzzSafe,
        checkCRC: OodleLZ_CheckCRC,
        verbosity: OodleLZ_Verbosity,
        threadPhase: OodleLZ_Decode_ThreadPhase,
    ) -> OO_BOOL;
}
extern "C" {
    pub fn OodleLZDecoder_MakeValidCircularWindowSize(
        compressor: OodleLZ_Compressor,
        minWindowSize: OO_S32,
    ) -> OO_S32;
}
extern "C" {
    pub fn OodleLZ_MakeSeekChunkLen(rawLen: OO_S64, desiredSeekPointCount: OO_S32) -> OO_S32;
}
extern "C" {
    pub fn OodleLZ_GetNumSeekChunks(rawLen: OO_S64, seekChunkLen: OO_S32) -> OO_S32;
}
extern "C" {
    pub fn OodleLZ_GetSeekTableMemorySizeNeeded(
        numSeekChunks: OO_S32,
        flags: OodleLZSeekTable_Flags,
    ) -> OO_SINTa;
}
extern "C" {
    pub fn OodleLZ_FillSeekTable(
        pTable: *mut OodleLZ_SeekTable,
        flags: OodleLZSeekTable_Flags,
        seekChunkLen: OO_S32,
        rawBuf: *const ::std::os::raw::c_void,
        rawLen: OO_SINTa,
        compBuf: *const ::std::os::raw::c_void,
        compLen: OO_SINTa,
    ) -> OO_BOOL;
}
extern "C" {
    pub fn OodleLZ_CreateSeekTable(
        flags: OodleLZSeekTable_Flags,
        seekChunkLen: OO_S32,
        rawBuf: *const ::std::os::raw::c_void,
        rawLen: OO_SINTa,
        compBuf: *const ::std::os::raw::c_void,
        compLen: OO_SINTa,
    ) -> *mut OodleLZ_SeekTable;
}
extern "C" {
    pub fn OodleLZ_FreeSeekTable(pTable: *mut OodleLZ_SeekTable);
}
extern "C" {
    pub fn OodleLZ_CheckSeekTableCRCs(
        rawBuf: *const ::std::os::raw::c_void,
        rawLen: OO_SINTa,
        seekTable: *const OodleLZ_SeekTable,
    ) -> OO_BOOL;
}
extern "C" {
    pub fn OodleLZ_FindSeekEntry(rawPos: OO_S64, seekTable: *const OodleLZ_SeekTable) -> OO_S32;
}
extern "C" {
    pub fn OodleLZ_GetSeekEntryPackedPos(
        seekI: OO_S32,
        seekTable: *const OodleLZ_SeekTable,
    ) -> OO_S64;
}
